--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -22,51 +22,65 @@
         color: #FFF;
         font-size: 24px;
         margin-bottom: 20px;
+        text-transform: uppercase;
     }
     p{
         font-size: 16px;
         margin: 10px 0;
+        text-align: justify;
     }
     a{
         color: #ccc;
         text-decoration: none;
+        text-transform: uppercase;
         display: block;
         margin-bottom: 8px; 
         font-size: 18px; 
         &:hover{
-            color: #FFF;
+            color: #0189F9;
         }
     }
-    .social_links a{
-        display: inline-block;
-        font-size: 30px;
-        transition: all ease-in-out .2s;
-        -webkit-transition: all ease-in-out .2s;
-        -moz-transition: all ease-in-out .2s;
-        -ms-transition: all ease-in-out .2s;
-        -o-transition: all ease-in-out .2s;
-        @include en{
-            margin-right: 30px;
+    .social_links{
+        text-align: center;
+        a{
+            display: inline-block;
+            font-size: 30px;
+            margin: 0 20px;
+            transition: all ease-in-out .2s;
+            -webkit-transition: all ease-in-out .2s;
+            -moz-transition: all ease-in-out .2s;
+            -ms-transition: all ease-in-out .2s;
+            -o-transition: all ease-in-out .2s;
+            &:hover{
+                cursor: pointer;
+                transform: scale(1.3);
+                -webkit-transform: scale(1.3);
+                -moz-transform: scale(1.3);
+                -ms-transform: scale(1.3);
+                -o-transform: scale(1.3);
+}
         }
-        @include ar{
-            margin-left: 30px;
-        }
-        &:hover{
-            cursor: pointer;
-            transform: scale(1.2);
-            -webkit-transform: scale(1.2);
-            -moz-transform: scale(1.2);
-            -ms-transform: scale(1.2);
-            -o-transform: scale(1.2);
-        }
+    }
+    .logo{
+        display: block;
+        margin: auto;
+        width: 350px;
+        max-width: 100%;
     }
     .copy_right{
         color: #FFF;
-        font-size: 14px; 
+        font-size: 14px;
         text-align: center;
         border-top: 1px solid #FFF;
         padding-top: 20px;
+}
+}
+@media (max-width:767px) {
+    .footer{
+        text-align: center;
+        h4{
+            margin: 20px 0;
+        }
     }
 }
-  
   
