--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -21,8 +21,9 @@
         text-align: center;
         box-shadow: rgb(220, 220, 220) 0px 2px 10px;
         .navbar-brand{
+            width: 120px;
             .logo{
-                width: 120px;
+                width: 100%;
                 max-width: 100%;
                 transition: all ease-in-out .3s;
                 &:hover{
@@ -31,7 +32,7 @@
                     -moz-transform: translateX(20px) rotate(20deg);
                     -ms-transform: translateX(20px) rotate(20deg);
                     -o-transform: translateX(20px) rotate(20deg);
-}
+                }
             }
         }
         .nav-item a{
