--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -42,7 +42,7 @@
     }
     .social_links{
         text-align: center;
-        a{
+        >a{
             display: inline-block;
             font-size: 30px;
             margin: 0 20px;
@@ -58,13 +58,32 @@
                 -moz-transform: scale(1.3);
                 -ms-transform: scale(1.3);
                 -o-transform: scale(1.3);
-}
+            }
+        }
+        .contact_info{
+            width: fit-content;
+            text-align: start;
+            padding: 10px 0;
+            margin: 20px auto;
+            border-top: 1px solid#ccc;
+            border-bottom: 1px solid#ccc;
+            i{
+                @include en{
+                    margin-right: 10px;
+                }
+                @include ar{
+                    margin-left: 10px;
+                }
+            }
+            p, a{
+                font-size: 16px;
+            }
         }
     }
     .logo{
         display: block;
-        margin: auto;
-        width: 350px;
+        margin: 0 auto 10px;
+        width: 250px;
         max-width: 100%;
     }
     .copy_right{
