--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -16,22 +16,28 @@
 .vision_header{
     overflow: hidden;
     .navbar{
-        padding: 0 20px;
+        padding: 20px;
         background-color: #FFF;
         text-align: center;
         box-shadow: rgb(220, 220, 220) 0px 2px 10px;
         .navbar-brand{
             width: 120px;
+            @include en{
+                margin-right: 50px;
+            }
+            @include ar{
+                margin-left: 50px;
+            }
             .logo{
                 width: 100%;
                 max-width: 100%;
                 transition: all ease-in-out .3s;
                 &:hover{
-                    transform: translateX(20px) rotate(20deg);
-                    -webkit-transform: translateX(20px) rotate(20deg);
-                    -moz-transform: translateX(20px) rotate(20deg);
-                    -ms-transform: translateX(20px) rotate(20deg);
-                    -o-transform: translateX(20px) rotate(20deg);
+                    transform: scale(1.1) rotate(20deg);
+                    -webkit-transform: scale(1.1) rotate(20deg);
+                    -moz-transform: scale(1.1) rotate(20deg);
+                    -ms-transform: scale(1.1) rotate(20deg);
+                    -o-transform: scale(1.1) rotate(20deg);
                 }
             }
         }
@@ -95,6 +101,7 @@
     .vision_header{
         .navbar{
             .navbar-brand{
+                margin: 0 !important;
                 .logo{
                     width: 100px;
                 }
