--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -3,6 +3,10 @@
   src: url("./../../assets//fonts/Roboto/Roboto-Light.ttf") format("opentype");
 }
 @font-face {
+  font-family: "Roboto-Medium";
+  src: url("./../../assets//fonts/Roboto/Roboto-Medium.ttf") format("opentype");
+}
+@font-face {
   font-family: "Roboto-Bold";
   src: url("./../../assets//fonts/Roboto/Roboto-Bold.ttf") format("opentype");
 }
@@ -62,9 +66,12 @@
       z-index: 2;
       color: #fff;
       font-size: 45px;
-      text-align: center;
-      max-width: 750px;
+      max-width: 800px;
       text-transform: uppercase;
+      text-align: left;
+      @include ar{
+        text-align: right;
+      }
       &.slide-in {
         opacity: 0;
         transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
@@ -125,15 +132,14 @@
       width: 70%;
     }
     .scope {
-      font-family: "Roboto-Light";
+      font-family: "Roboto-Medium";
       display: flex;
       align-items: center;
       color: #FFF;
       border: 2px solid #FFF;
       border-radius: 10px;
       padding: 20px;
-      margin-bottom: 20px;
-      text-decoration: none;
+      margin: 20px;
       cursor: pointer;
       transition: all ease-in-out 0.3s;
       -webkit-transition: all ease-in-out 0.3s;
@@ -146,17 +152,17 @@
         -moz-transform: scale(1.1);
         -ms-transform: scale(1.1);
         -o-transform: scale(1.1);
-        color: #02B3EC;
-        border: 2px solid #02B3EC;
+        background-color: #FFF;
+        color: #04035F;
+        border: 2px solid #04035F;
       }
-      i {
-        font-size: 75px;
-        color: #02B3EC;
+      img {
+        width: 75px;
         @include en {
-          margin-right: 15px;
+          margin-right: 30px;
         }
         @include ar {
-          margin-left: 15px;
+          margin-left: 30px;
         }
       }
       p {
@@ -191,7 +197,10 @@
       h3 {
         font-size: 28px;
         margin: 20px 0;
-        text-align: center;
+        text-align: left;
+        @include ar{
+          text-align: right;
+        }
       }
       h5 {
         font-size: 16px;
@@ -257,7 +266,7 @@
     .header {
       height: calc(100vh - 110px);
       p {
-        top: 25vh;
+        top: 30vh;
         font-size: 25px;
         padding: 0 20px;
       }
