--- a/src/Pages/About/About.scss
+++ b/src/Pages/About/About.scss
@@ -133,10 +133,14 @@
     }
   }
 
+  ul{
+    padding: 0 20px;
+  }
+
   li {
     font-family: "Roboto-Regular";
-    font-size: 18px;
-    color: #096EC0;
+    font-size: 20px;
+    color: #144C77;
     margin-bottom: 5px;
   }
 
