--- a/src/Pages/ContactUs/ContactUs.scss
+++ b/src/Pages/ContactUs/ContactUs.scss
@@ -80,8 +80,11 @@
         -moz-transform: translateY(-100%);
         -ms-transform: translateY(-100%);
         -o-transform: translateY(-100%);
-
-    }
+        -webkit-transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+        -moz-transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+        -ms-transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+        -o-transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
+}
     .slide-in.active {
         opacity: 1;
         transform: translateY(0) !important;
