--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -80,6 +80,44 @@
             }
         }
     }
+    .routes{
+        a{
+            transition: all ease-in-out .3s;
+            -webkit-transition: all ease-in-out .3s;
+            -moz-transition: all ease-in-out .3s;
+            -ms-transition: all ease-in-out .3s;
+            -o-transition: all ease-in-out .3s;
+            &::before{
+                font-family: "FontAwesome";
+                font-weight: 900;
+                @include en{
+                    content: "\F101";
+                    margin-right: 10px;
+                }
+                @include ar{
+                    content: "\F100";
+                    margin-left: 10px;
+                }
+            }
+            &:hover{
+                @include en{
+                    transform: translateX(15px);
+                    -webkit-transform: translateX(15px);
+                    -moz-transform: translateX(15px);
+                    -ms-transform: translateX(15px);
+                    -o-transform: translateX(15px);
+                }
+                @include ar{
+                    transform: translateX(-15px);
+                    -webkit-transform: translateX(-15px);
+                    -moz-transform: translateX(-15px);
+                    -ms-transform: translateX(-15px);
+                    -o-transform: translateX(-15px);
+                }
+               
+            }
+        }
+    }
     .logo{
         display: block;
         margin: 0 auto 10px;
