fix arrow down at mobile

--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -317,6 +317,10 @@
         font-size: 25px;
         padding: 0 20px;
       }
+
+      .arrow_down{
+        bottom: 100px;
+      }
     }
     // Work Scope
     .work_scope {
