--- a/src/Pages/Home/Home.scss
+++ b/src/Pages/Home/Home.scss
@@ -80,7 +80,7 @@
       top: 15vh;
       z-index: 2;
       color: #fff;
-      font-size: 45px;
+      font-size: 40px;
       max-width: 800px;
       text-transform: uppercase;
       text-align: left;
@@ -272,22 +272,16 @@
       -moz-border-radius: 10px;
       -ms-border-radius: 10px;
       -o-border-radius: 10px;
-      p{
-        font-size: 18px;
-      }
-      h4{
-        font-size: 30px;
-        font-family: "Roboto-Bold";
-      }
       a{
         display: block;
         margin: auto;
-        padding: 0;
+        padding: 0 10px;
         text-align: center;
         color: #FFF;
         background-color: #0678D6;
         border: 1px solid#0678D6;
-        width: 200px;
+        min-width: 200px;
+        max-width: fit-content;
         height: 70px;
         line-height: 70px;
         font-size: 24px;
