--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -124,6 +124,9 @@
 // Language Modal
 .modal{
     text-align: center;
+    .modal-dialog{
+        max-width: 400px;
+    }
     .modal-title{
         color: #01338D;
     }
