--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -13,7 +13,8 @@
         @content;
     }
 }
-.vision_header{
+
+header{
     overflow: hidden;
     .navbar{
         padding: 20px;
@@ -166,7 +167,7 @@
     }
 }
 @media (max-width: 998px) {
-    .vision_header{
+    header{
         .navbar{
             .container-fluid{
                 display: block;
@@ -181,15 +182,20 @@
             .navbar-collapse{
                 margin-top: 20px;
             }
+            .navbar-nav{
+                padding: 0;
+            }
             .nav-item a{
                 margin: 0;
             }
             .navbar-toggler{
                 position: absolute;
                 top: 30px;
-                right: 0;
+                @include en{
+                    right: 0;
+                }
                 @include ar{
-                    // float: left;
+                    left: 0;
                 }
             }
         }
