--- a/src/Pages/SustainableDevelopment/SustainableDevelopment.scss
+++ b/src/Pages/SustainableDevelopment/SustainableDevelopment.scss
@@ -5,16 +5,12 @@
         display: block;
         width: 600px;
         max-width: 100%;
-        margin: 0 auto 100px;
+        // margin: 0 auto 100px;
+        margin: 0 auto;
         border-radius: 20px;
         -webkit-border-radius: 20px;
         -moz-border-radius: 20px;
         -ms-border-radius: 20px;
         -o-border-radius: 20px;
-    }
-    p{
-        font-size: 20px;
-        color: #fff;
-        margin-bottom: 30px;
     }
 }
