fix work scope images style

--- a/src/App.scss
+++ b/src/App.scss
@@ -84,6 +84,7 @@ html[dir="rtl"] body{
       img {
         width: 150px;
         height: 150px;
+        border: 2px solid #04035F;
         border-radius: 10px;
         -webkit-border-radius: 10px;
         -moz-border-radius: 10px;
